--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,8 @@ jobs:
               with:
                 go-version: 1.14
             - run: go version
+            - if: matrix.os == 'ubuntu-latest'
+              run: apt-get update && apt-get install gcc-multilib
             - uses: actions/checkout@v2
             - name: Build ${{ matrix.goos }}/${{ matrix.arch }}
               run: go build -o ${{ matrix.goos }}-${{ matrix.arch }}${{ matrix.ext }}
