--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
                 go-version: 1.14
             - run: go version
             - if: matrix.os == 'ubuntu-latest'
-              run: apt-get update && apt-get install gcc-multilib
+              run: sudo apt-get update && sudo apt-get install -y gcc-multilib
             - uses: actions/checkout@v2
             - name: Build ${{ matrix.goos }}/${{ matrix.arch }}
               run: go build -o ${{ matrix.goos }}-${{ matrix.arch }}${{ matrix.ext }}
