--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,12 +15,17 @@ jobs:
                     - os: windows-latest
                       goos: windows
                       bin: 'gophish.exe'
+                      release: 'gophish-${{ GITHUB_REF }}-windows'
                     - os: ubuntu-latest
                       goos: linux
                       bin: 'gophish'
+                      release: 'gophish-${{ GITHUB_REF }}-linux'
                     - os: macos-latest
                       goos: darwin
                       bin: 'gophish'
+                      release: 'gophish-${{ GITHUB_REF }}-osx'
+                # Don't build windows-32bit due to missing MinGW dependencies
+                # Don't build osx-32bit due to eventual drop in Go support
                 exclude:
                     - os: windows-latest
                       arch: '386'
@@ -34,6 +39,12 @@ jobs:
             - run: go version
             - if: matrix.os == 'ubuntu-latest'
               run: sudo apt-get update && sudo apt-get install -y gcc-multilib
+            - if: matrix.arch == '386'
+              env:
+                RELEASE: ${{ matrix.release }}-32bit
+            - if: matrix.arch == 'amd64'
+              env:
+                RELEASE: ${{ matrix.release }}-64bit
             - uses: actions/checkout@v2
             - name: Build ${{ matrix.goos }}/${{ matrix.arch }}
               run: go build -o ${{ matrix.bin }}
@@ -44,7 +55,7 @@ jobs:
             - name: Upload to artifacts
               uses: actions/upload-artifact@v2
               with:
-                name: ${{ matrix.goos }}-${{ matrix.arch }}${{ matrix.ext }}
+                name: ${{ env.RELEASE }}
                 path: ${{ matrix.bin }}
 
 
