--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,9 +41,9 @@ jobs:
             - if: matrix.os == 'ubuntu-latest'
               run: sudo apt-get update && sudo apt-get install -y gcc-multilib
             - if: matrix.arch == '386'
-              run: echo "::set-env name=RELEASE::gophish-${{ env.GITHUB_REF }}-${{ matrix.releaseos}}-32bit"
+              run: echo "::set-env name=RELEASE::gophish-${GITHUB_REF/refs\/tags\//}-${{ matrix.releaseos}}-32bit"
             - if: matrix.arch == 'amd64'
-              run: echo "::set-env name=RELEASE::gophish-${{ env.GITHUB_REF }}-${{ matrix.release}}-64bit"
+              run: echo "::set-env name=RELEASE::gophish-${GITHUB_REF/refs\/tags\//}-${{ matrix.release}}-64bit"
             - uses: actions/checkout@v2
             - name: Build ${{ matrix.goos }}/${{ matrix.arch }}
               run: go build -o ${{ matrix.bin }}
