--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,12 +38,13 @@ jobs:
                 go-version: 1.14
             - run: go version
             - run: env
+            - run: echo ${{github.event}}
             - if: matrix.os == 'ubuntu-latest'
               run: sudo apt-get update && sudo apt-get install -y gcc-multilib
             - if: matrix.arch == '386'
               run: echo "::set-env name=RELEASE::gophish-${{ github.event.tag_name }}-${{ matrix.releaseos}}-32bit"
             - if: matrix.arch == 'amd64'
-              run: bash echo "::set-env name=RELEASE::gophish-${{ github.event.tag_name}}-${{ matrix.releaseos}}-64bit"
+              run: echo "::set-env name=RELEASE::gophish-${{ github.event.tag_name}}-${{ matrix.releaseos}}-64bit"
             - uses: actions/checkout@v2
             - name: Build ${{ matrix.goos }}/${{ matrix.arch }}
               run: go build -o ${{ matrix.bin }}
