--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
                 go-version: 1.14
             - run: go version
             - run: env
-            - run: echo ${{toJson(github.event)}}
+            - run: echo '${{toJson(github.event)}}'
             - if: matrix.os == 'ubuntu-latest'
               run: sudo apt-get update && sudo apt-get install -y gcc-multilib
             - if: matrix.arch == '386'
