--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,14 +37,12 @@ jobs:
               with:
                 go-version: 1.14
             - run: go version
-            - run: env
-            - run: echo '${{toJson(github.event)}}'
             - if: matrix.os == 'ubuntu-latest'
               run: sudo apt-get update && sudo apt-get install -y gcc-multilib
             - if: matrix.arch == '386'
-              run: echo "::set-env name=RELEASE::gophish-${{ github.event.tag_name }}-${{ matrix.releaseos}}-32bit"
+              run: echo "::set-env name=RELEASE::gophish-${{ github.event.release.tag_name }}-${{ matrix.releaseos}}-32bit"
             - if: matrix.arch == 'amd64'
-              run: echo "::set-env name=RELEASE::gophish-${{ github.event.tag_name}}-${{ matrix.releaseos}}-64bit"
+              run: echo "::set-env name=RELEASE::gophish-${{ github.event.release.tag_name}}-${{ matrix.releaseos}}-64bit"
             - uses: actions/checkout@v2
             - name: Build ${{ matrix.goos }}/${{ matrix.arch }}
               run: go build -o ${{ matrix.bin }}
