--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
                   for BINARY in $RELEASE_DIR/*
                   do
                     cp $BINARY .;
-                    zip -r releases/$RELEASE_DIR.zip \
+                    zip -r releases/$(basename $RELEASE_DIR).zip \
                       static/js/dist \
                       static/js/src/vendor/ckeditor \
                       static/css/dist \
