--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,6 +99,7 @@ jobs:
     upload:
         name: Upload to the Release
         runs-on: ubuntu-latest
+        needs: package
         steps:
             - uses: actions/download-artifact@v2
               with:
