--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,67 +4,70 @@ on:
         types: [created]
 
 jobs:
-    build:
-        name: Build Binary
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [windows-latest, ubuntu-latest, macos-latest]
-                arch: ['386', amd64]
-                include:
-                    - os: windows-latest
-                      goos: windows
-                      bin: 'gophish.exe'
-                      releaseos: windows
-                    - os: ubuntu-latest
-                      goos: linux
-                      bin: 'gophish'
-                      releaseos: linux
-                    - os: macos-latest
-                      goos: darwin
-                      bin: 'gophish'
-                      releaseos: osx
-                # Don't build windows-32bit due to missing MinGW dependencies
-                # Don't build osx-32bit due to eventual drop in Go support
-                exclude:
-                    - os: windows-latest
-                      arch: '386'
-                    - os: macos-latest
-                      arch: '386'
-        steps:
-            - name: Set up Go
-              uses: actions/setup-go@v2
-              with:
-                go-version: 1.14
-            - if: matrix.os == 'ubuntu-latest'
-              run: sudo apt-get update && sudo apt-get install -y gcc-multilib
-            - if: matrix.arch == '386'
-              run: echo "::set-env name=RELEASE::gophish-${{ github.event.release.tag_name }}-${{ matrix.releaseos}}-32bit"
-            - if: matrix.arch == 'amd64'
-              run: echo "::set-env name=RELEASE::gophish-${{ github.event.release.tag_name}}-${{ matrix.releaseos}}-64bit"
-            - uses: actions/checkout@v2
-            - name: Build ${{ matrix.goos }}/${{ matrix.arch }}
-              run: go build -o ${{ matrix.bin }}
-              env:
-                GOOS: ${{ matrix.goos }}
-                GOARCH: ${{ matrix.arch }}
-                CGO_ENABLED: 1
-            - name: Upload to artifacts
-              uses: actions/upload-artifact@v2
-              with:
-                name: ${{ env.RELEASE }}
-                path: ${{ matrix.bin }}
+    # build:
+    #     name: Build Binary
+    #     runs-on: ${{ matrix.os }}
+    #     strategy:
+    #         matrix:
+    #             os: [windows-latest, ubuntu-latest, macos-latest]
+    #             arch: ['386', amd64]
+    #             include:
+    #                 - os: windows-latest
+    #                   goos: windows
+    #                   bin: 'gophish.exe'
+    #                   releaseos: windows
+    #                 - os: ubuntu-latest
+    #                   goos: linux
+    #                   bin: 'gophish'
+    #                   releaseos: linux
+    #                 - os: macos-latest
+    #                   goos: darwin
+    #                   bin: 'gophish'
+    #                   releaseos: osx
+    #             # Don't build windows-32bit due to missing MinGW dependencies
+    #             # Don't build osx-32bit due to eventual drop in Go support
+    #             exclude:
+    #                 - os: windows-latest
+    #                   arch: '386'
+    #                 - os: macos-latest
+    #                   arch: '386'
+    #     steps:
+    #         - name: Set up Go
+    #           uses: actions/setup-go@v2
+    #           with:
+    #             go-version: 1.14
+    #         - if: matrix.os == 'ubuntu-latest'
+    #           run: sudo apt-get update && sudo apt-get install -y gcc-multilib
+    #         - if: matrix.arch == '386'
+    #           run: echo "::set-env name=RELEASE::gophish-${{ github.event.release.tag_name }}-${{ matrix.releaseos}}-32bit"
+    #         - if: matrix.arch == 'amd64'
+    #           run: echo "::set-env name=RELEASE::gophish-${{ github.event.release.tag_name}}-${{ matrix.releaseos}}-64bit"
+    #         - uses: actions/checkout@v2
+    #         - name: Build ${{ matrix.goos }}/${{ matrix.arch }}
+    #           run: go build -o ${{ matrix.bin }}
+    #           env:
+    #             GOOS: ${{ matrix.goos }}
+    #             GOARCH: ${{ matrix.arch }}
+    #             CGO_ENABLED: 1
+    #         - name: Upload to artifacts
+    #           uses: actions/upload-artifact@v2
+    #           with:
+    #             name: ${{ env.RELEASE }}
+    #             path: ${{ matrix.bin }}
 
 
     package:
         name: Package Assets
         runs-on: ubuntu-latest
-        needs: build
+        # needs: build
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/download-artifact@v2
-              with:
-                path: bin
+            # - uses: actions/download-artifact@v2
+            #   with:
+            #     path: bin
+            - run: mkdir bin
+            - run: mkdir bin/release
+            - run: echo "test" > bin/release/upload.txt
             - name: Package Releases
               run: |
                 mkdir releases;
