--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,58 +56,58 @@ jobs:
     #             path: ${{ matrix.bin }}
 
 
-    package:
-        name: Package Assets
-        runs-on: ubuntu-latest
-        # needs: build
-        steps:
-            - uses: actions/checkout@v2
-            # - uses: actions/download-artifact@v2
-            #   with:
-            #     path: bin
-            - run: mkdir bin
-            - run: mkdir bin/release
-            - run: echo "test" > bin/release/upload.txt
-            - name: Package Releases
-              run: |
-                mkdir releases;
-                for RELEASE_DIR in bin/*
-                do
-                  echo "Creating release $RELEASE_DIR"
-                  for BINARY in $RELEASE_DIR/*
-                  do
-                    cp $BINARY .;
-                    zip -r releases/$(basename $RELEASE_DIR).zip \
-                      static/js/dist \
-                      static/js/src/vendor/ckeditor \
-                      static/css/dist \
-                      static/images \
-                      static/font \
-                      static/db \
-                      db \
-                      templates \
-                      README.md \
-                      VERSION \
-                      LICENSE \
-                      config.json;
-                    rm $BINARY;
-                  done
-                done
-            - name: Upload to artifacts
-              uses: actions/upload-artifact@v2
-              with:
-                name: releases
-                path: releases/*.zip
+    # package:
+    #     name: Package Assets
+    #     runs-on: ubuntu-latest
+    #     needs: build
+    #     steps:
+    #         - uses: actions/checkout@v2
+    #         - uses: actions/download-artifact@v2
+    #           with:
+    #             path: bin
+    #         - name: Package Releases
+    #           run: |
+    #             mkdir releases;
+    #             for RELEASE_DIR in bin/*
+    #             do
+    #               echo "Creating release $RELEASE_DIR"
+    #               for BINARY in $RELEASE_DIR/*
+    #               do
+    #                 cp $BINARY .;
+    #                 zip -r releases/$(basename $RELEASE_DIR).zip \
+    #                   static/js/dist \
+    #                   static/js/src/vendor/ckeditor \
+    #                   static/css/dist \
+    #                   static/images \
+    #                   static/font \
+    #                   static/db \
+    #                   db \
+    #                   templates \
+    #                   README.md \
+    #                   VERSION \
+    #                   LICENSE \
+    #                   config.json;
+    #                 rm $BINARY;
+    #               done
+    #             done
+    #         - name: Upload to artifacts
+    #           uses: actions/upload-artifact@v2
+    #           with:
+    #             name: releases
+    #             path: releases/*.zip
     
     upload:
         name: Upload to the Release
         runs-on: ubuntu-latest
-        needs: package
+        #needs: package
         steps:
-            - uses: actions/download-artifact@v2
-              with:
-                name: releases
-                path: releases/
+            # - uses: actions/download-artifact@v2
+            #   with:
+            #     name: releases
+            #     path: releases/
+
+            - run: mkdir releases
+            - run: echo "test" > releases/upload.txt
             # I would love to use @actions/upload-release-asset, but they don't
             # support wildcards in the asset path. Ref #9, #24, and #47
             - env:
