--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,7 +116,7 @@ jobs:
                 AUTH_HEADER: "Authorization: token ${{ secrets.GITHUB_TOKEN }}"
               run: |
                 UPLOAD_URL=$(echo -n $UPLOAD_URL | sed s/\{.*//g)
-                echo "${UPLOAD_URL}?name=$(basename $FILE)"
+                echo "${UPLOAD_URL}?name=$(basename releases/upload.txt)"
                 for FILE in releases/*
                 do
                   echo "Uploading $FILE";
