--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,6 +124,6 @@ jobs:
                     -H "${AUTH_HEADER}" \
                     -H "${API_HEADER}"
                     -H "Content-Type: $(file -b --mime-type $FILE)" \
-                    --data-binary @$FILE \
+                    --data-binary "@$FILE" \
                     "${UPLOAD_URL}?name=$(basename $FILE)";
                 done
