--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,5 +125,5 @@ jobs:
                     -H "${API_HEADER}"
                     -H "Content-Type: $(file -b --mime-type ${FILE})" \
                     --data-binary "@${FILE}" \
-                    "${UPLOAD_URL}?name=$(basename $FILE)"'';
+                    "${UPLOAD_URL}?name=$(basename $FILE)"';
                 done
