--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,9 +121,9 @@ jobs:
                 for FILE in releases/*
                 do
                   echo "Uploading ${FILE}";
-                  echo 'curl \
-                    -H "${API_HEADER}"
-                    -H "Content-Type: $(file -b --mime-type ${FILE})" \
-                    --data-binary "@${FILE}" \
-                    "${UPLOAD_URL}?name=$(basename $FILE)"';
+                  echo "curl \
+                    -H \"${API_HEADER}\"
+                    -H \"Content-Type: $(file -b --mime-type ${FILE})\" \
+                    --data-binary \"@${FILE}\" \
+                    \"${UPLOAD_URL}?name=$(basename $FILE)\"";
                 done
