--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,6 +74,7 @@ jobs:
                   do
                     cp $BINARY .;
                     zip -r releases/$(basename $RELEASE_DIR).zip \
+                      ${BINARY} \
                       static/js/dist \
                       static/js/src/vendor/ckeditor \
                       static/css/dist \
@@ -112,8 +113,6 @@ jobs:
                 AUTH_HEADER: "Authorization: token ${{ secrets.GITHUB_TOKEN }}"
               run: |
                 UPLOAD_URL=$(echo -n $UPLOAD_URL | sed s/\{.*//g)
-                echo "${UPLOAD_URL}?name=$(basename releases/upload.txt)"
-                echo "$(file -b --mime-type releases/upload.txt)"
                 for FILE in releases/*
                 do
                   echo "Uploading ${FILE}";
