--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,10 +104,10 @@ jobs:
         runs-on: ubuntu-latest
         # needs: package
         steps:
-            - uses: actions/download-artifact@v2
-              with:
-                name: releases
-                path: releases/
+            # - uses: actions/download-artifact@v2
+            #   with:
+            #     name: releases
+            #     path: releases/
             # I would love to use @actions/upload-release-asset, but they don't
             # support wildcards in the asset path. Ref #9, #24, and #47
             - run: "mkdir releases; echo \"test\" > releases/test.txt"
