--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -139,7 +139,7 @@ jobs:
                 do
                   FILENAME=$(basename ${FILE})
                   HASH=$(sha256sum ${FILE} | cut -d ' ' -f 1)
-                  HASH_TABLE="${HASH_TABLE}|${HASH}|${FILENAME}|"
+                  HASH_TABLE="${HASH_TABLE}|${HASH}|${FILENAME}|\n"
                 done
                 echo "${HASH_TABLE}"
                 curl \
